--- a/stylsheet.css
+++ b/stylsheet.css
@@ -3,3 +3,9 @@
     margin: 0;
     padding: 0;
 }
+tr{
+    border-collapse: collapse;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
