--- a/stylsheet.css
+++ b/stylsheet.css
@@ -52,3 +52,44 @@ table th:nth-child(5),
 table td:nth-child(5) {
     width: 25%;
 }
+nav ul{
+    overflow: hidden;
+    background-color: blue;
+    list-style-type: none;
+    display: flex;
+}
+nav a{
+    color: white;
+    text-decoration: none;
+    display: block;
+    padding: 2rem;
+    text-align: center;
+    font-weight: bold;
+
+}
+nav a:hover{
+    color: black;
+    text-decoration: underline;
+background-color: #3ca7ff;
+}
+.rollen{
+    word-wrap: normal;
+    border-collapse: collapse;
+    border: 1px solid black;
+    padding: 1rem;
+    width: 100%;
+    table-layout: fixed;
+
+}
+.rol{
+    column-span: all;
+    border : none;
+}
+.rollen th:nth-child(1),
+.rollen td:nth-child(1) {
+    width: 25%;
+}
+.rollen th:nth-child(2),
+.rollen td:nth-child(2) {
+    width: 75%;
+}
