--- a/stylsheet.css
+++ b/stylsheet.css
@@ -56,7 +56,7 @@ table td:nth-child(5) {
 }
 nav ul{
     overflow: hidden;
-    background-image: url("/Images/Berg.jpg");
+    background-image: url("/images/Berg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     list-style-type: none;
